<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Taekwondo-Time-Tracker-Android</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Main Activity Strings -->
    <string name="main_title">Listing All Training Hours</string>

    <!-- Punchcard Activity Strings -->
    <string name="punchcard_training_purpose">Training Purpose</string>
    <string name="punchcard_date">Date</string>
    <string name="punchcard_start_time">Start Time</string>
    <string name="punchcard_end_time">End Time</string>
    <string name="punchcard_submit">Submit</string>

    <!-- Action bar items -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add Punchcard</string>
    <string name="title_activity_punchcard">PunchcardActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
