<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hackbitstudios.taekwondo_time_tracker_android.PunchcardActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Training Purpose -->
            <TextView
                android:text="@string/punchcard_training_purpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
            <Spinner
                android:id="@+id/punchcard_purpose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <!-- Date -->
            <TextView
                android:text="@string/punchcard_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
            <DatePicker
                android:id="@+id/punchcard_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"/>

            <!-- Start Time -->
            <TextView
                android:text="@string/punchcard_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
            <TimePicker
                android:id="@+id/punchcard_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- End Time -->
            <TextView
                android:text="@string/punchcard_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>
            <TimePicker
                android:id="@+id/punchcard_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Submit Button -->
            <Button
                android:id="@+id/punchcard_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/punchcard_submit"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
